@@ -226,12 +226,13 @@ server implementation and provides
 The full command syntax of ``udpipe_server`` is
 ```
 udpipe_server [options] port default_model (model_ids model_file acknowledgements)*
-Options: --concurrent_models=maximum concurrently loaded models (default 10)
-         --daemon (daemonize after start)
-         --log_file=path (change log file path)
-         --log_request_max_size=maximum request log size
-         --no_check_models_loadable (do not check models are loadable)
-         --no_preload_default (do not preload default model)
+Options: --connection_timeout=maximum connection timeout [s] (default 60)
+         --daemon (daemonize after start, supported on Linux only)
+         --log_file=file path (no logging if empty, default udpipe_server.log)
+         --log_request_max_size=max req log size [kB] (0 unlimited, default 64)
+         --max_connections=maximum network connections (default 256)
+         --max_request_size=maximum request size [kB] (default 1024)
+         --threads=threads to use (default 0 means unlimitted)
 ```
 
 The ``udpipe_server`` can run either in foreground or in background (when
